2025-01 Cumulative Update for Version 2501 (6.1.10)

--- a/blog.html
+++ b/blog.html
@@ -246,68 +246,59 @@
                     </div>
                 </div>
             </div>
-            <div class="row pw-portfolio">
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2025-06-01">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/2GkeIsN.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>Personal Version 6.0 - A Significant Refresh</h4>
-                            <a class="read" href="blog/personal-v6-0.html" class="portfolio-img"><i
+
+            <div class="container">
+                <div class="wbnrfz-grid">
+                    <div class="card wbd" data-date="2025-06-01">
+                        <img src="https://i.imgur.com/2GkeIsN.png" alt="Work 1">
+                        <div class="card-content">
+                            <h3>Personal Version 6.0 - A Significant Refresh</h3>
+                            <a href="blog/personal-v6-0.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2025-06-01">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/sycXHkv.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>Personal Version 5.0 - Iterations & AI</h4>
-                            <a class="read" href="blog/personal-v5-0.html" class="portfolio-img"><i
+                    <div class="card wbd" data-date="2025-06-01">
+                        <img src="https://i.imgur.com/sycXHkv.png" alt="Work 2">
+                        <div class="card-content">
+                            <h3>Personal Version 5.0 - Iterations & AI</h3>
+                            <a href="blog/personal-v5-0.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2024-10-12">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/jgMsRKZ.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>Personal Version 4.4 - Optimizations Galore</h4>
-                            <a class="read" href="blog/personal-v4-3.html" class="portfolio-img"><i
+                    <div class="card wbd" data-date="2024-10-12">
+                        <img src="https://i.imgur.com/jgMsRKZ.png" alt="Work 3">
+                        <div class="card-content">
+                            <h3>Personal Version 4.4 - Optimizations Galore</h3>
+                            <a href="blog/personal-v4-3.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30" data-date="2024-10-12">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FA2hB9i.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>If you can't beat them, join them</h4>
-                            <a class="read" href="blog/wayfind-2.html" class="portfolio-img"><i
+                    <div class="card wfd" data-date="2024-10-12">
+                        <img src="https://i.imgur.com/FA2hB9i.png" alt="Work 4">
+                        <div class="card-content">
+                            <h3>If you can't beat them, join them</h3>
+                            <a href="blog/wayfind-2.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2024-09-01">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/0CCS3Ks.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>Personal V4 - A big redesign</h4>
-                            <a class="read" href="blog/personal-v4-1.html" class="portfolio-img"><i
+                    <div class="card wbd" data-date="2024-09-01">
+                        <img src="https://i.imgur.com/0CCS3Ks.png" alt="Work 4">
+                        <div class="card-content">
+                            <h3>Personal V4 - A big redesign</h3>
+                            <a href="blog/personal-v4.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30" data-date="2024-06-30">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/smZXorB.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>New Wayfinding System - How has it been so far?</h4>
-                            <a class="read" href="blog/wayfind.html" class="portfolio-img"><i
+                    <div class="card wfd" data-date="2024-06-30">
+                        <img src="https://i.imgur.com/smZXorB.png" alt="Work 4">
+                        <div class="card-content">
+                            <h3>New Wayfinding System - How has it been so far?</h3>
+                            <a href="blog/wayfind.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
