2025-01 Cumulative Update for Version 2501 (6.1.11)

--- a/works-by-nrfz copy.html
+++ b/works-by-nrfz copy.html
@@ -385,7 +385,7 @@
             </div> -->
 
 
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2022">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2022">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/JAQpFxJ.png" alt="bus-rep">
                 <div class="hover-content-blog">
@@ -394,9 +394,9 @@
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 " data-year="2023">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 " data-year="2023">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/fLPs7g4.png" alt="time-tree">
                 <div class="hover-content-blog">
@@ -405,9 +405,9 @@
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/VEDgOwO.png" alt="more-rep">
                 <div class="hover-content-blog">
@@ -416,9 +416,9 @@
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2023">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2023">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/b1p4yg3.png" alt="mrt-sign-s1">
                 <div class="hover-content-blog">
@@ -427,9 +427,9 @@
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2023">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 " data-year="2023">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/OOsyWrU.png" alt="mrt-sign-s2">
                 <div class="hover-content-blog">
@@ -438,9 +438,9 @@
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 " data-year="2022">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 " data-year="2022">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/y8FkWzk.png" alt="hydration-reg">
                 <div class="hover-content-blog">
@@ -449,7 +449,7 @@
                       class="fa-solid fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2023">
               <div class="single-portfolio-content">
