--- a/buszy/art.html
+++ b/buszy/art.html
@@ -78,13 +78,13 @@
         margin-bottom: 0.5rem;
     }
 
-    .card .card-content {
+    .card .card-content-art {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
     }
 
-    .card .card-content span {
+    .card .card-content-art span {
         display: flex;
         align-items: center;
         gap: 0.5rem;
