--- a/buszy.html
+++ b/buszy.html
@@ -208,7 +208,7 @@
         font-size: 20px;
         font-weight: bold;
         margin-left: 12px;
-        cursor: default;
+        cursor: pointer;
     }
 
     .bus-stop-info {
