--- a/buszy.html
+++ b/buszy.html
@@ -453,7 +453,7 @@
 
     <script>
         if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("/service-worker.js")
+            navigator.serviceWorker.register("/nrfz-dev/service-worker.js")
                 .then((registration) => {
                     console.log("Service Worker registered with scope:", registration.scope);
                 })
