2025-01 Preview Update for Version 2501 (6.1.11)

--- a/buszy/art.html
+++ b/buszy/art.html
@@ -76,6 +76,7 @@
         font-weight: bold;
         font-size: 1.2rem;
         margin-bottom: 0.5rem;
+        border-radius: 15px;
     }
 
     .card .card-content-art {
@@ -197,6 +198,7 @@
     body.dark-mode .card .card-header {
         background-color: #0000002c;
         border-radius: 15px;
+        color: #fff;
     }
 
     body.dark-mode .service-no {
@@ -529,7 +531,7 @@
 
     <script src="js/art.js"></script>
 
-    
+
 
 </body>
 
