--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -270,7 +270,7 @@
       <div class="container">
         <div class="wbnrfz-grid">
           <div class="card ds" data-date="2025-11-30">
-            <img src="https://i.imgur.com/9zxAL3F.png" alt="buszy">
+            <img src="https://i.imgur.com/TBlQxOJ.png" alt="buszy">
             <div class="card-content">
               <h3>Buszy - Bus Arrival Timings</h3>
               <a href="worksbynrfz/buszy.html" class="pw-btn-small btn-2"><i 
