--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 <div class="wbnrfz-grid">
                     <div class="card">
-                        <img src="https://i.imgur.com/9zxAL3F.png" alt="Work 1">
+                        <img src="https://i.imgur.com/TBlQxOJ.png" alt="Work 1">
                         <div class="card-content">
                             <h3>Buszy - Bus Arrival Timings</h3>
                             <a href="buszy.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
