2025-01 Preview Update for Version 2501 (6.1.14)

--- a/buszy.html
+++ b/buszy.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
     <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#007bff">
 
     <link rel="icon" href="img/core-img/favicon.png">
 
@@ -228,6 +229,7 @@
         body.dark-mode .bus-stop-description {
             margin-left: 0px;
             margin-top: 5px;
+            font-size: 20px;
         }
     }
 </style>
