--- a/buszy/art.html
+++ b/buszy/art.html
@@ -213,6 +213,13 @@
         background-color: #2e2e2e;
     }
 
+    @media (min-width: 1200px) {
+        .col-xl-3 {
+            flex: 0 0 auto;
+            width: 30%;
+        }
+    }
+
     @media (max-width: 576px) {
         .fleet-legend {
             display: flex;
@@ -226,6 +233,51 @@
 
         .fleet-legend span {
             font-size: 12px;
+        }
+
+        .img-fluid {
+            width: 40px !important;
+            height: auto;
+            object-fit: cover;
+        }
+
+        .card .card-content-art span {
+            font-size: 20px;
+        }
+    }
+
+    @media (max-width: 485px) {
+        .card .card-content-art span {
+            font-size: 17px;
+        }
+
+        .bus-stop-info {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .bus-stop-description,
+        body.dark-mode .bus-stop-description {
+            font-size: 35px;
+            font-weight: bold;
+            margin-left: 0px;
+            margin-top: 10px;
+            cursor: default;
+        }
+    }
+
+    @media (max-width: 450px) {
+        .btn {
+            width: 35px;
+        }
+    }
+
+    @media screen and (max-width: 400px) {
+        .pin-msg {
+            font-size: 12px !important;
+            text-align: center;
+            display: flex;
+            align-items: center;
         }
     }
 </style>
@@ -407,27 +459,29 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
+                                    title="Pinned"></i>
                                 Pinned</a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i>
+                                Nearby</a>
                         </li>
 
                         <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
+                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
+                                Search </a>
                         </li>
 
                         <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
-                                Announcements</a>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
+                                Announcements </a>
                         </li>
 
                         <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
-                                Settings</a>
+                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
+                                Settings </a>
                         </li>
                     </ul>
 
