--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -12,6 +12,8 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
+    <link rel="manifest" href="../manifest.json">
+
     <link rel="icon" href="../img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
@@ -62,12 +64,40 @@
         background-color: #bb2d3b;
     }
 
+    .btn-install {
+        position: relative;
+        z-index: 1;
+        min-width: 50px;
+        width: 170px;
+        height: 46px;
+        line-height: 46px;
+        font-size: 14px;
+        font-weight: 500;
+        display: inline-block;
+        padding: 0 30px;
+        text-align: center;
+        text-transform: capitalize;
+        color: #fff;
+        border-radius: 60px;
+        transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        border: none;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+        background-color: #1f84a2;
+    }
+
     .btn-rfetch:focus,
-    .btn-rfetch:hover {
+    .btn-rfetch:hover,
+    .btn-install:focus,
+    .btn-install:hover {
         font-weight: 500;
         background-color: #6d99c0 !important;
         color: #fff;
         transform: translateY(-2px);
+    }
+
+    .btn-install:disabled {
+        background-color: grey !important;
+        cursor: not-allowed;
     }
 
     .label-set {
@@ -264,6 +294,7 @@
                             <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
                                 Announcements</a>
                         </li>
+                        </li>
                         <li>
                             <a href="#" class="active"><i class="fa-solid fa-gear"></i>
                                 Settings</a>
@@ -318,6 +349,18 @@
                     <p class="fetch">Clear cached bus stop data to ensure you have the latest information.</p>
                 </li>
             </ul>
+
+            <h2 class="text-center" style="padding-top: 1em;">Install</h2>
+            <ul class="list-group">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                            <button id="install-btn" class="btn btn-install">Install App</button>
+                            <button id="refresh-btn" class="btn btn-install" style="display:inline-block;">Refresh App</button>
+                        </div>
+                        <p class="fetch">Install this web app on your device for a better experience.</p>
+                    </li>
+                </ul>
         </div>
 
     </section>
