2025-01 Preview Update for Version 2501 (6.1.14)

--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -296,7 +296,7 @@
                         </svg>
                     </div>
 
-                    <ul>
+                    <ul id="scrollable-tabs">
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                                 Pinned</a>
