--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -317,7 +317,7 @@
                         </svg>
                     </div>
 
-                    <ul>
+                    <ul id="scrollable-tabs">
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
                             Pinned</a>
