--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -216,7 +216,7 @@
 
           </div>
 
-          <ul>
+          <ul id="scrollableTabs">
             <li>
               <a href="eicw.html">Design System Introduction</a>
             </li>
