2025-01 Preview Update for Version 2501 (6.2.x)

--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -350,13 +350,23 @@
                 </li>
             </ul>
 
+            <h2 class="text-center" style="padding-top: 1em;">For Dev Only</h2>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <button class="btn btn-rfetch"> <a href="smrt-mdp/smrt-mdp.html">Hehehehe</a></button><br>
+                    
+                </li>
+            </ul>
+
+
             <h2 class="text-center" style="padding-top: 1em;">Install</h2>
             <ul class="list-group">
                 <ul class="list-group">
                     <li class="list-group-item">
                         <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                             <button id="install-btn" class="btn btn-install">Install App</button>
-                            <button id="refresh-btn" class="btn btn-install" style="display:inline-block;">Refresh App</button>
+                            <button id="refresh-btn" class="btn btn-install" style="display:inline-block;">Refresh
+                                App</button>
                         </div>
                         <p class="fetch">Install this web app on your device for a better experience.</p>
                     </li>
